# iNote2Obsidian

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  progress.md  pyproject.toml
NativeApp/: Package.swift
NativeApp/Sources/iNote2ObsidianApp/: AppLocalizer.swift  AppLogger.swift  AppModels.swift  AppSettingsStore.swift  AppViewModel.swift  ExistingNoteIndex.swift  LogsView.swift  MarkdownRenderer.swift  MarkdownTransformer.swift  MenuContentView.swift  NotesBridge.swift  Scheduler.swift  SettingsView.swift  SparkleUpdater.swift  StateStore.swift  SyncEngine.swift  iNote2ObsidianApp.swift
NativeApp/Tests/iNote2ObsidianAppTests/: AppLocalizationTests.swift  ExistingNoteIndexTests.swift  MarkdownTransformerTests.swift
launchd/: com.inote2obsidian.sync.plist.template
scripts/: install_launchd.sh  native_app_smoke_test.sh  package_unsigned_dmg.sh  uninstall_launchd.sh
src/inote2obsidian/: __init__.py  cli.py  config.py  logging.py  models.py  notes_bridge.py  parser.py  state_db.py  sync_engine.py  transform.py  writer.py
tests/: test_parser.py  test_state_db.py  test_sync_engine.py  test_transform.py  test_writer.py
